Controller, data mod, and display mod whipped into shape.

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,6 @@
     <title>Major League Baseball Statistics</title>
 </head>
 <body>
-    <div id="root"></div>
-    <script src="./js/app.js" type="module"></script>
+    <script src="./js/Controller.js" type="module"></script>
 </body>
 </html>
