Added details modal dialog for focused and selected game.

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <!-- Normally, I would enable search engines to find my app, but I don't want any other job candidates to find my solution. - Ken A Collins -->
-    <!-- <meta name="description" content="Major League Baseball games schedule with statistics and ability to drill down for detailed data."> -->
-    <!-- <meta name="keywords" content="MLB, Major League Baseball, baseball, games, schedule, statistics"> -->
+    <!-- Normally, I would enable search engines to discover my app, but I don't want any other job candidates to find my solution. - Ken A Collins -->
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     
     <!-- CSS stylesheets go first in head, scripts are defined later in body. -->
     <!-- Add support for Materialize CSS (https://materializecss.com/). -->
